fix: :pushpin: correctly vendor prism version 0.18.0
(somehow I provided prism from master)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -249,6 +249,9 @@ opt-level = 3
 # is merged.
 cpal = { git = "https://github.com/DouglasDwyer/cpal.git", rev = "91aeb4d6b02c25791f636fdf92a73637597c077a" }
 
+[patch.'https://github.com/ruby/prism']
+prism-sys = { path = "crates/prism-sys" }
+
 # If you want to use the bleeding edge version of egui and eframe:
 # egui = { git = "https://github.com/emilk/egui", branch = "master" }
 # eframe = { git = "https://github.com/emilk/egui", branch = "master" }
