--- a/crates/data/Cargo.toml
+++ b/crates/data/Cargo.toml
@@ -29,3 +29,6 @@ bytemuck.workspace = true
 strum.workspace = true
 paste.workspace = true
 camino.workspace = true
+
+[features]
+debug-modification-locations = []
