--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ categories.workspace = true
 
 # Setup various shared workspace values
 [workspace]
-members = ["crates/*"]
+members = ["crates/*", "plugins/rust_example"]
 resolver = "2"
 
 [workspace.lints.rust]
@@ -166,6 +166,7 @@ luminol-proc-macros = { version = "0.4.0", path = "crates/proc-macros/" }
 luminol-modals = { version = "0.4.0", path = "crates/modals/" }
 luminol-term = { version = "0.4.0", path = "crates/term/" }
 luminol-ui = { version = "0.4.0", path = "crates/ui/" }
+luminol-plugins = { version = "0.4.0", path = "crates/plugins/" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
