--- a/crates/plugins/Cargo.toml
+++ b/crates/plugins/Cargo.toml
@@ -11,6 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
+wasm-bridge = { version = "0.4.0", features = ["component-model"] }
 
 [lints]
 workspace = true
