--- a/crates/plugins/Cargo.toml
+++ b/crates/plugins/Cargo.toml
@@ -12,6 +12,8 @@ categories.workspace = true
 
 [dependencies]
 wasm-bridge = { version = "0.4.0", features = ["component-model"] }
+slab.workspace = true
+color-eyre.workspace = true
 
 [lints]
 workspace = true
