--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -27,6 +27,7 @@ ron.workspace = true
 once_cell.workspace = true
 
 luminol-data.workspace = true
+luminol-macros.workspace = true
 indexmap = "2.2.6"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
