--- a/Cargo.toml
+++ b/Cargo.toml
@@ -174,6 +174,7 @@ luminol-plugins = { version = "0.4.0", path = "crates/plugins/" }
 luminol-eframe.workspace = true
 luminol-egui-wgpu.workspace = true
 luminol-macros.workspace = true
+luminol-plugins.workspace = true
 egui.workspace = true
 egui_extras.workspace = true
 
