--- a/crates/command_parser/Cargo.toml
+++ b/crates/command_parser/Cargo.toml
@@ -21,3 +21,9 @@ luminol-filesystem.workspace = true
 luminol-config.workspace = true
 luminol-data.workspace = true
 luminol-core.workspace = true
+
+indextree = "4.7.2"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies.poll-promise]
+workspace = true
+features = ["tokio"]
